--- a/sort-store-locator/index.html
+++ b/sort-store-locator/index.html
@@ -429,6 +429,12 @@
        * Wait until the map loads to make changes to the map.
        */
       map.on('load', () => {
+
+        map.addSource('places', {
+          'type': 'geojson',
+          'data': stores
+        });
+
         const geocoder = new MapboxGeocoder({
           accessToken: mapboxgl.accessToken, // Set the access token
           mapboxgl: mapboxgl, // Set the mapbox-gl instance
@@ -436,12 +442,44 @@
           bbox: [-77.210763, 38.803367, -76.853675, 39.052643] // Set the bounding box coordinates
         });
 
-        map.addControl(geocoder, 'top-left');
+        geocoder.on('result', (event) => {
+          const searchResult = event.result.geometry;
+          const options = { units: 'miles' };
+          for (const store of stores.features) {
+            store.properties.distance = turf.distance(
+              searchResult,
+              store.geometry,
+              options
+            );
+          }
+          stores.features.sort((a, b) => {
+            if (a.properties.distance > b.properties.distance) {
+              return 1;
+            }
+            if (a.properties.distance < b.properties.distance) {
+              return -1;
+            }
+            return 0; // a must be equal to b
+          });
+          const listings = document.getElementById('listings');
+            while (listings.firstChild) {
+              listings.removeChild(listings.firstChild);
+            }
+            buildLocationList(stores);
 
-        map.addSource('places', {
-          'type': 'geojson',
-          'data': stores
+          const activeListing = document.getElementById(
+            `listing-${stores.features[0].properties.id}`
+          );
+          activeListing.classList.add('active');
+          const bbox = getBbox(stores, 0, searchResult);
+            map.fitBounds(bbox, {
+              padding: 100
+          });
+
+          createPopUp(stores.features[0]);
         });
+
+        map.addControl(geocoder, 'top-left');
 
         /**
          * Add all the things to the page:
@@ -524,6 +562,10 @@
           if (store.properties.phone) {
             details.innerHTML += ` &middot; ${store.properties.phoneFormatted}`;
           }
+          if (store.properties.distance) {
+            const roundedDistance = Math.round(store.properties.distance * 100) / 100;
+            details.innerHTML += `<div><strong>${roundedDistance} miles away</strong></div>`;
+          }
 
           /**
            * Listen to the element and when it is clicked, do four things:
@@ -571,6 +613,38 @@
             `<h3>Sweetgreen</h3><h4>${currentFeature.properties.address}</h4>`
           )
           .addTo(map);
+      }
+      function getBbox(sortedStores, storeIdentifier, searchResult) {
+        const lats = [
+          sortedStores.features[storeIdentifier].geometry.coordinates[1],
+          searchResult.coordinates[1]
+        ];
+        const lons = [
+          sortedStores.features[storeIdentifier].geometry.coordinates[0],
+          searchResult.coordinates[0]
+        ];
+        const sortedLons = lons.sort((a, b) => {
+          if (a > b) {
+            return 1;
+          }
+          if (a.distance < b.distance) {
+            return -1;
+          }
+          return 0;
+        });
+        const sortedLats = lats.sort((a, b) => {
+          if (a > b) {
+            return 1;
+          }
+          if (a.distance < b.distance) {
+            return -1;
+          }
+          return 0;
+        });
+        return [
+          [sortedLons[0], sortedLats[0]],
+          [sortedLons[1], sortedLats[1]]
+        ];
       }
     </script>
   </body>
