finish with analyzing turf

--- a/sort-store-locator/index.html
+++ b/sort-store-locator/index.html
@@ -131,7 +131,7 @@
         cursor: pointer;
         height: 56px;
         width: 56px;
-        background-image: url('/img/marker.png');
+        background-image: url('/sort-store-locator/img/marker.png');
       }
 
       /* Marker tweaks */
